--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "laravel/nova": "^4",
-        "laravel/framework": "^8.0|^9.0"
+        "laravel/framework": "^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
